# lighthouse

./: .gitignore  AGENTS.md  Cargo.toml  HANDOFF.md  README.md  SUMMARY.md  package-lock.json  package.json  vite.config.ts
Users: /Users/toshonjennings/lighthouse/src-tauri/src/: scanner.rs
electron/: main.js
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_editor.rs  lib.rs  main.rs  monitor.rs  portmaster.rs  projects.rs  resolver.rs  scanner.rs
src/styles/: main.css
