[package]
name = "lighthouse"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Port management dashboard — see what's running, detect conflicts, fix them."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "=0.4.31"
dirs = "5"
regex = "1"
walkdir = "2"
notify = "6"
once_cell = "1"

[dependencies.cookie]
version = "=0.17.0"

[dependencies.time]
version = "=0.3.36"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
